--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,6 +47,7 @@
   --bs-dark: #212529;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
+  --bs-my-choice-rgb: 238, 238, 238;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -9249,6 +9250,11 @@ fieldset:disabled .btn {
 .bg-secondary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-mychoice {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-gray-600), var(--bs-bg-opacity)) !important;
 }
 
 .bg-success {
